--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "reporter",
   "version": "0.0.1",
   "description": "",
-  "main": "reporter.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node reporter",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
