--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^0.22.0",
     "config": "^1.21.0",
     "inky": "^1.3.7",
     "joi": "^9.1.0",
